[project]
name = "enhanced-youtube-automation"
version = "0.1.0"
description = "Procedural YouTube video generation and upload automation"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.170.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
